# solana-stablecoin-pipeline

./: .env.example  .gitignore  README.md  explore_raw_data.ipynb  pyproject.toml
app/: dashboard.py
scripts/: run_backfill.sh
src/: config.py
src/ai/: __init__.py  gemini_insights.py  insights.py
src/decode/: __init__.py  decoder.py  models.py
src/ingest/: __init__.py  backfill.py  cli.py  client.py
src/utils/: __init__.py  labels.py
tests/: test_decoder.py
transform/: dbt_project.yml  profiles.yml
transform/models/gold/: daily_stablecoin_flows.sql  dex_flows.sql  holder_concentration.sql  schema.yml  wallet_analytics.sql
transform/models/silver/: schema.yml  stablecoin_transfers.sql
transform/models/staging/: schema.yml  stg_transactions.sql
