[project]
name = "solana-stablecoin-pipeline"
version = "0.1.0"
description = "Medallion architecture pipeline for USDC/PYUSD flows on Solana"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "solders>=0.21.0",
    "solana>=0.32.0",
    "anchorpy>=0.19.0",
    "base58>=2.1.0",
    "httpx>=0.27.0",
    "dlt[duckdb]>=0.4.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
dashboard = [
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
    "pandas>=2.2.0",
]
streaming = [
    "grpcio>=1.60.0",
    "betterproto>=2.0.0",
]

[project.scripts]
ingest = "src.ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
